[package]
name = "ed"
version = "0.2.2-alpha.0"
authors = ["Matt Bell <mappum@gmail.com>"]
edition = "2018"
description = "Encode and Decode traits"
license = "MIT"

[dependencies]
ed-derive = "0.2.2"
thiserror = "1.0"

[dev-dependencies]
mutagen = {git = "https://github.com/llogiq/mutagen"}

[profile.bench]
lto = true

[profile.release]
lto = true

