[package]
name = "ed"
version = "0.2.3-alpha.0"
authors = ["Matt Bell <mappum@gmail.com>"]
edition = "2018"
description = "Encode and Decode traits"
license = "MIT"

[dependencies]
ed-derive = { version = "0.3.0", path = "derive" }
thiserror = "1.0"

[dev-dependencies]
mutagen = {git = "https://github.com/llogiq/mutagen"}

[profile.bench]
lto = true

[profile.release]
lto = true

